# eve-trade-hub-analyzer

./: .env.example  .gitignore  ADDENDUM.md  Cargo.toml  DECISIONS.md  PROMPT.md  README.md  docker-compose.yml  seeding.csv  stock_health.csv  sync-prod-to-local.sh
.github/workflows/: ci.yml
Bluey 2/: Bluey.html  forgepath-app.jsx  forgepath-bom.jsx  forgepath-data.js  forgepath-graph-v1.jsx  forgepath-graph.jsx  forgepath-v1.css  forgepath.css
apps/bluey/: Cargo.toml
apps/bluey/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/bluey/frontend/src/: App.svelte  main.ts
apps/bluey/frontend/src/components/: BoardPanel.svelte  BomPanel.svelte  BreakdownPanel.svelte  ChainNodeCard.svelte  Graph.svelte  Header.svelte  Legend.svelte  StateToggle.svelte  graph-context.ts
apps/bluey/frontend/src/lib/: api.ts  pi-tier.ts  types.ts
apps/bluey/frontend/src/styles/: app.css
apps/bluey/src/: config.rs  main.rs
apps/bluey/src/api/: bom.rs  chain.rs  mod.rs  products.rs
apps/intel/: Cargo.toml
apps/intel/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/intel/frontend/src/: App.svelte  main.ts
apps/intel/frontend/src/components/: Current.svelte  Heatmap.svelte  Pilots.svelte  Safety.svelte  Systems.svelte
apps/intel/frontend/src/lib/: api.ts
apps/intel/frontend/src/styles/: app.css
apps/intel/migrations/: 001_init.sql
apps/intel/src/: api.rs  config.rs  db.rs  main.rs  sde.rs  state.rs
apps/intel/src/ingest/: backfill.rs  mod.rs  reader.rs  watch.rs
apps/intel/src/parser/: extract.rs  mod.rs  raw.rs
apps/intel/src/report/: current.rs  heatmap.rs  mod.rs  pilots.rs  safety.rs  systems.rs
apps/trade-hub/: Cargo.toml
apps/trade-hub/migrations/: 20260517000002_addendum.sql  20260517000003_snapshots.sql  20260520000001_stock_health_daily.sql  20260523000001_industry_sde.sql  20260526000001_rename_daily_tables.sql
apps/trade-hub/src/: config.rs  db.rs  lib.rs
apps/trade-hub/src/analysis/: mod.rs  output.rs  seeding.rs  stock_health.rs  stock_health_history.rs
apps/trade-hub/src/esi/: auth.rs  client.rs  market.rs  mod.rs
apps/trade-hub/src/sde/: mod.rs
apps/trade-hub/src/sheets/: auth.rs  mod.rs
apps/trade-hub/src/snapshot/: hub.rs  jita.rs  mod.rs
apps/trade-hub/tests/: auth_flow_test.rs  esi_client_test.rs  smoke_test.rs
crates/eve-auth/: Cargo.toml
crates/eve-auth/src/: lib.rs
crates/eve-core/: Cargo.toml
crates/eve-core/src/: error.rs  lib.rs  telemetry.rs
crates/eve-esi/: Cargo.toml
crates/eve-esi/src/: client.rs  lib.rs  market.rs
crates/eve-industry/: Cargo.toml
crates/eve-industry/src/: classify.rs  lib.rs  loader.rs  recipe.rs
crates/eve-market/: Cargo.toml
crates/eve-market/src/: lib.rs
crates/eve-pricing/: Cargo.toml
crates/eve-pricing/src/: lib.rs
crates/eve-sde/: Cargo.toml
crates/eve-sheets/: Cargo.toml
crates/eve-sheets/src/: api.rs  auth.rs  lib.rs
deploy/: env.example  eve-trade-hub-poll.service  eve-trade-hub-rollup.service  eve-trade-hub-rollup.timer  eve-trade-hub-sde-sync.service  eve-trade-hub-sde-sync.timer  setup-pi.sh
migrations/: 20260517000001_sde.sql  20260517000004_rollup.sql
src/: config.rs  crypto.rs  lib.rs
src/analysis/: mod.rs  seeding.rs  stock_health.rs
src/esi/: client.rs  market.rs  mod.rs
src/sde/: mod.rs
src/sheets/: api.rs
src/snapshot/: mod.rs
tests/: auth_flow_test.rs  esi_client_test.rs
tests/common/: mod.rs
