[package]
name = "eve-trade-hub-analyzer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[[bin]]
name = "auth"
path = "src/bin/auth.rs"

[[bin]]
name = "discover"
path = "src/bin/discover.rs"

[[bin]]
name = "sde-sync"
path = "src/bin/sde_sync.rs"

[[bin]]
name = "poll"
path = "src/bin/poll.rs"

[[bin]]
name = "rollup"
path = "src/bin/rollup.rs"

[[bin]]
name = "report"
path = "src/bin/report.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "query"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
aes-gcm = "0.10"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
rand = "0.8"
base64 = "0.22"
url = "2"
sha2 = "0.10"
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
