[workspace]
resolver = "2"
members = [
  "crates/eve-core",
  "crates/eve-esi",
  "crates/eve-auth",
  "crates/eve-sde",
  "crates/eve-industry",
  "crates/eve-sheets",
  "crates/eve-market",
  "apps/trade-hub",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "query"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "migrate",
  "chrono",
  "uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
url = "2"
sha2 = "0.10"
futures = "0.3"
async-trait = "0.1"
wiremock = "0.6"
tempfile = "3"
