[package]
name = "eve-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
eve-core = { path = "../eve-core" }

tokio.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde.workspace = true
jsonwebtoken.workspace = true
oauth2.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
