[package]
name = "eve-sde"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
eve-core = { path = "../eve-core" }

tokio.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tracing.workspace = true
sha2.workspace = true
