[package]
name = "eve-sheets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
eve-core = { path = "../eve-core" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
